# ClosedGL

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml
ClosedGL/: CMakeLists.txt
ClosedGL/assets/shaders/: axis.shader  complex.shader  simple.shader
ClosedGL/include/: ClosedGL.h  main.cpp  pch.h
ClosedGL/include/ClosedGL/Core/: Actor.h  Application.cpp  Application.h  Clock.cpp  Clock.h  EntryPoint.h  Input.cpp  Input.h  Log.cpp  Log.h  OrthographicCamera.cpp  PerspectiveCamera.cpp  PerspectiveCamera.h  Timestep.h  Window.cpp  Window.h
ClosedGL/include/ClosedGL/Core/Managers/: Managers.cpp  SceneManager.h  TextureManager.cpp  TextureManager.h
ClosedGL/include/ClosedGL/Core/backends/: imgui_impl_glfw.cpp
ClosedGL/include/ClosedGL/Events/: Event.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
ClosedGL/include/ClosedGL/Layers/: Controller.cpp  Controller.h  ImGuiController.cpp  ImGuiController.h  ImGuiLayer.cpp  ImGuiLayer.h  Layer.h  LayerStack.cpp  LayerStack.h  StatsLayer.cpp  StatsLayer.h  View.cpp  View.h
ClosedGL/include/ClosedGL/Renderer/: Batch.cpp  Batch.h  Buffer.cpp  Buffer.h  RenderCommands.cpp  RenderCommands.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
ClosedGL/include/ClosedGL/Scene/: Components.h  Entity.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Scene.cpp  Scene.h
ClosedGL/include/ClosedGL/Utils/: Observer.h  Utils.h
ClosedGL/test/: CMakeLists.txt  SceneManagerTests.cpp  tests.cpp
Editor/: CMakeLists.txt
Editor/include/: Commands.cpp  Commands.h  Editor.cpp  Editor.h  GameObject.h  Inspector.cpp  Inspector.h  MyObs.h  SceneHierarchy.cpp  SceneHierarchy.h  SceneView.cpp  SceneView.h  Toolbar.cpp  Toolbar.h  Utils.h
Sandbox/: CMakeLists.txt  Sandbox.cpp  main.cpp
