
set(PROJECT_NAME "ClosedGLTest")

include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

enable_testing()

set(TESTS_SOURCES
	"SceneManagerTests.cpp"
)

add_executable(Testing ${TESTS_SOURCES})
target_link_libraries(Testing PRIVATE GTest::gtest_main)
target_link_libraries(Testing PRIVATE ${STATICLIB})

include(GoogleTest)
gtest_discover_tests(Testing)

